[package]
name = "cd-pls"
description = "A pretty LS-like screen for when you CD."
license = "MIT"
authors = ["Violet Iapalucci"]
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
devicons = "0.1.0"

[[bin]]
path = "src/main.rs"
name = "pls"
